<resources>
    <string name="app_name">Grosa_CP_Projekt</string>
    <string name="easy">Facile</string>
    <string name="normal">Normal</string>
    <string name="hard">Difficile</string>
    <string name="congratulation">Bravo !</string>
    <string name="you_won">Tu as gagné</string>
    <string name="points">points</string>
    <string name="back_menu">Retourner au Menu</string>
    <string name="addition">Addition</string>
    <string name="substraction">Soustraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="explanation">Explications</string>
    <string name="explanation_operation">Dans ce jeu, apprends à additionner, soustraire, multiplier et diviser. Ecrit dans la zone de texte le résultat de l\'opération, et appuie sur suivant!</string>
    <string name="explanation_crossedWords">Trouve les mots et remplis la grille.</string>
    <string name="explanation_magicsquare">Dans ce carré, remplis les cases manquante pour qu\'en additionnant les cases horizontalement et verticalement on trouve toujours le même résultat!</string>
    <string name="explanation_questions">Dans ce jeu, choisis ton sujet préféré et réponds aux questions en appuyant sur la bonne réponse!</string>
    <string name="continue_">Continuer</string>
    <string name="reset_account">Réinitialiser compte</string>
    <string name="erase_account">Supprimer compte</string>
    <string name="back">Retour</string>
    <string name="authorization_needed">Cette opération nécessite les privilèges de l\'administrateur</string>
    <string name="password_please">Entrez votre mot de passe:</string>
    <string name="password_will_be_needed">Pour certaines opérations, un mot de passe sera demandé</string>
    <string name="create_password">Entrez ce mot de passe pour le créer:</string>
    <string name="topic_english">Français</string>
    <string name="topic_history">Histoire</string>
    <string name="topic_geography">Géographie</string>
    <string name="student_settings">Paramètres de l\'élève</string>
    <string name="operation_game_name">Opérations</string>
    <string name="games">Jeux</string>
    <string name="total">Score total:</string>
    <string name="questions_game_name">Questions</string>
    <string name="crossed_words_game_name">Mots croisés</string>
    <string name="magic_square_game_name">Carré magique</string>
    <string name="password_empty">Le mot de passe ne peut pas être vide</string>
    <string name="select_user">Appuye sur ton profil</string>
    <string name="create_user">Créer mon profil</string>
    <string name="test_without_profile">Tester sans profil</string>
    <string name="name">Nom</string>
    <string name="surname">Prénom</string>
    <string name="name_or_surname_empty">Le nom ou le prénom ne peuvent pas être vide</string>
    <string name="wrong_password">Mauvais mot de passe</string>
    <string name="user_removed">Utilisateur supprimé</string>
    <string name="scores_removed">Les scores de cet utilisateur ont été remis à 0</string>
    <string name="operations_add_question">Additionne le nombre de gauche avec le nombre de droite, et écris le résultat dans la case de droite.</string>
    <string name="operations_sub_question">Soustraie le nombre de gauche avec le nombre de droite, et écris le résultat dans la case de droite.</string>
    <string name="operations_mult_question">Multiplie le nombre de gauche avec le nombre de droite, et écris le résultat dans la case de droite.</string>
    <string name="operations_div_question">Divise le nombre de gauche avec le nombre de droite, et écris le résultat dans la case de droite.</string>
    <string name="help">Aide</string>
    <string name="verify">Vérifier les réponses</string>
    <string name="never_give_up">Courage! Tu feras mieux la prochaine fois!</string>
    <string name="magicsquare_title">Faites en sorte que les sommes des colonnes et des lignes soient les mêmes!</string>
    <string name="magicsquare_clue">Indication: la somme doit être</string>
    <string name="icon">Icone:</string>
</resources>
