<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:minHeight="80sp"
            android:onClick="onEnglishButtonPushed"
            android:text="@string/topic_english"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:minHeight="80sp"
            android:onClick="onHistoryButtonPushed"
            android:text="@string/topic_history"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button_geography"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:minHeight="80sp"
            android:onClick="onGeographyButtonPushed"
            android:text="@string/topic_geography"
            android:textSize="25sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:drawableLeft="@drawable/question_smol"
        android:onClick="onHelpButtonPushed"
        android:text="@string/help"
        android:textSize="24sp" />
</LinearLayout>