<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/congratulation"
        android:layout_marginBottom="15dp"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/you_won_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/you_won"
            android:layout_marginLeft="10dp"
            android:textSize="36sp"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="20"
            android:gravity="center"
            android:textColor="#3C3C3C"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/points"
            android:textSize="36sp" />
    </LinearLayout>

    <Button
        android:id="@+id/menu_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_menu"
        android:textSize="30sp"

        android:layout_marginTop="100dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:minHeight="80sp"/>

</LinearLayout>