<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CFCFCF"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/game_image"
            android:layout_width="80dp"
            android:layout_height="130dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/operations" />

        <TextView
            android:id="@+id/game_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="Opérations"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:drawableLeft="@drawable/plus"
            android:minHeight="80sp"
            android:onClick="onAdditionButtonPushed"
            android:text="@string/addition"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:drawableLeft="@drawable/minus"
            android:minHeight="80sp"
            android:onClick="onSubstractionButtonPushed"
            android:text="@string/substraction"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button_mul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:drawableLeft="@drawable/mult"
            android:minHeight="80sp"
            android:onClick="onMultiplicationButtonPushed"
            android:text="@string/multiplication"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button_div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:drawableLeft="@drawable/divide"
            android:minHeight="80sp"
            android:onClick="onDivisionButtonPushed"
            android:text="@string/division"
            android:textSize="25sp" />
    </LinearLayout>
</LinearLayout>